Added missing desctriptions for images

--- a/src/fotos.html
+++ b/src/fotos.html
@@ -16,13 +16,13 @@ collections:
     text: Zwischen den Lerneinheiten können sich die Kinder im Schwimmbad vergnügen.
   - src: 2018-03.jpg
     title: Schulung
-    text: Viele Eltern sind dankbar, wenn sie eine gute Schulungbesuchenkönnen.
+    text: Viele Eltern sind dankbar, wenn sie eine gute Schulung besuchen können.
   - src: 2018-04.jpg
     title: Schulung
     text: Ljudmila Maruschkewitsch ist selber auch Diabetikerin.
   - src: 2018-05.jpg
     title: Schulung
-    text:  Eltern wissen oft wenig über die verschiedenen Inhaltstoffe in den Lebensmitteln.
+    text: Eltern wissen oft wenig über die verschiedenen Inhaltstoffe in den Lebensmitteln.
   - src: 2018-06.jpg
     title: Ernährung
     text: Gemeinsames Essen.
@@ -43,7 +43,7 @@ collections:
     text: Ihre Spende ermöglicht den Kindern ein normales Leben!
   - src: 2018-12.jpg
     title: Gruppenfoto
-    text: Die Schulungen ermölichen auch den Austausch mit andern Betroffenen.
+    text: Die Schulungen ermöglichen auch den Austausch mit anderen Betroffenen.
   - src: 2018-13.jpg
     title: Kinder mit ihren Eltern
     text: Die Schulungen ermöglichen ein aktives Leben mit Diabetes.
@@ -52,59 +52,59 @@ collections:
   id: schulung2018-2
   images:
   - src: 2018-20.jpg
-    title: ...
-    text: ....
+    title: Kinder
+    text: Das Immunsystem der Kinder ist geschwächt.
   - src: 2018-21.jpg
-    title: Titel 1
-    text: Text zu Bild 1.
+    title: Im Schwimmbad
+    text: Die Schulungen sollen auch die Freude an der Bewegung wecken.
   - src: 2018-22.jpg
-    title: Titel 2
-    text: Text zu Bild 2.
+    title: Schulung
+    text: An jeder Schulung nehmen 6 Kinder mit ihrer Mutter, ihrem Vater oder auch mit der Grossmutter teil.
   - src: 2018-23.jpg
-    title: Titel 5
-    text: Text zu Bild 5.
+    title: Messung
+    text: Bestimmung des Blutzuckerspiegels.
   - src: 2018-24.jpg
-    title: ...
-    text: ....
+    title: Schulung
+    text: Nach dieser Schulung sind die Eltern und Kinder fähig, die richtigen Mengen Insulin zu spritzen.
   - src: 2018-25.jpg
-    title: ...
-    text: ....
+    title: Ernährung
+    text: Gemeinsames Essen.
   - src: 2018-26.jpg
-    title: ...
-    text: ....
+    title: Kinder
+    text: Ihre Spende ermöglicht den Kindern ein normales Leben!
   - src: 2018-27.jpg
-    title: ...
-    text: ....
+    title: Schulung
+    text: Ljudmila Maruschkewitsch gibt ihr Wissen mit viel Engagement weiter.
   - src: 2018-28.jpg
-    title: ...
-    text: ....
+    title: Medikamente
+    text: Der Umgang mit der Krankheit muss gelernt sein.
 - src: 2016
   title: Schulung 2016
   id: schulung2016
   images:
   - src: 2016-01.jpg
-    title: Titel 3
-    text: Text zu Bild 3.
+    title: Schulung
+    text: Viele Eltern sind dankbar, wenn sie eine gute Schulung besuchen können.
   - src: 2016-02.jpg
-    title: Titel 4
-    text: Text zu Bild 4.
+    title: Ernährung
+    text: Eine ausgewogene Ernährung ist wichtig.
   - src: 2016-03.jpg
-    title: Titel 5
-    text: Text zu Bild 5.
+    title: Schulung
+    text: Nach dieser Schulung sind die Eltern und Kinder fähig, die richtigen Mengen Insulin zu spritzen.
   - src: 2016-04.jpg
-    title: ...
-    text: ....
+    title: Medikamente
+    text: Der Umgang mit der Krankheit muss gelernt sein.
   - src: 2016-05.jpg
-    title: ...
-    text: ....
+    title: Gruppenfoto
+    text: Die Schulungen ermöglichen auch den Austausch mit anderen Betroffenen.
   - src: 2016-06.jpg
-    title: ...
-    text: ....
+    title: Kinder
+    text: Ihre Spende ermöglicht den Kindern ein normales Leben!
   - src: 2016-07.jpg
-    title: ...
-    text: ....
+    title: Kind mit Mutter
+    text: Kinder mit Diabetes erhalten eine wichtige Hilfe im Umgang mit ihrer Krankheit.
   - src: 2016-08.jpg
-    title: ...
-    text: ....
+    title: Kinder mit ihren Eltern
+    text: Die Schulungen ermöglichen ein aktives Leben mit Diabetes.
 ---
 
