Added link to Datenschutzerklärung to contact form.

--- a/src/kontakt.html
+++ b/src/kontakt.html
@@ -68,6 +68,7 @@ validate: true
     <div class="row">
       <div class="col-lg-12">
         <h4>Oder füllen Sie das nachfolgende Kontaktformular aus</h4>
+        <p>Beachten Sie auch die <a href="datenschutz.html">Datenschutzerklärung</a>.</p>
         <form id="contactform" action="contact/contact.php" method="post" class="validateform" name="send-contact">
           <div id="sendmessage">
             Ihre Nachricht wurde versandt. Vielen Dank!
