Added new fotos of educations in 2020

--- a/src/fotos.html
+++ b/src/fotos.html
@@ -4,6 +4,22 @@ title: Fotos
 navigation_weight: 50
 base_src: img/album
 collections:
+- src: 2020
+  title: Schulungen 2020
+  id: schulung2020
+  images:
+  - src: 2020-01.jpg
+    title: Schulung im Februar 2020
+    text: 
+  - src: 2020-03.jpg
+    title: Schulung im September 2020
+    text: 
+  - src: 2020-05.jpg
+    title: Schulung im September 2020
+    text: 
+  - src: 2020-09.jpg
+    title: Schulung im September 2020
+    text: 
 - src: 2018
   title: 1. Schulung 2018
   id: schulung2018-1
