added new Projektbericht 2021

--- a/src/projektberichte.html
+++ b/src/projektberichte.html
@@ -27,6 +27,22 @@ navigation_weight: 40
       <div class="col-lg-3">
         <div class="box">
           <div class="box-gray aligncenter">
+            <h4>Projektbericht 2021</h4>
+            <div class="icon">
+            <i class="fa fa-file-pdf-o fa-3x"></i>
+            </div>
+            <p class="">
+              Ausserordentliche Situation in Belarus
+            </p>
+          </div>
+          <div class="box-bottom">
+            <a href="files/bericht_situation_2021.pdf">Bericht lesen</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3">
+        <div class="box">
+          <div class="box-gray aligncenter">
             <h4>Projektbericht 2019</h4>
             <div class="icon">
             <i class="fa fa-file-pdf-o fa-3x"></i>
