removed konto-information

--- a/src/spenden.html
+++ b/src/spenden.html
@@ -25,23 +25,12 @@ navigation_weight: 70
     </div>
     <div class="row">
       <div class="col-lg-8">
+        <h2>Verein in Auflösung</h2>
         <p>
-          Verein Belarus Diabetes<br />
-          8910 Affoltern a. A.<br />
-          PC-Konto: 60-174261-3<br />
-          IBAN: CH 13 0900 0000 6017 4261 3<br />
-          <strong>Herzlichen Dank!</strong>
-        </p>
-        <h2>Wie kann ich helfen?</h2>
-        <p>
-          Viele Menschen in Belarus haben wenig Geld und darum ist jede Form von finanzieller Hilfe sehr wertvoll. 
-          Die Unterstützung des Diabetes-Projekts in Belarus ermöglicht Kindern den richtigen Umgang mit Diabetes und hilft Spätfolgen zu minimieren. 
+          Der Verein Belarus Diabetes befindet sich in Auflösung. Es sind deshalb keine Spenden mehr möglich.
         </p>
         <p class="bigger">
-          Helfen Sie den Diabetes-Kindern mit Ihrer Spende!
-        </p>
-        <p>
-          Unser <a href="files/flyer2018.pdf"><i class="fa fa-file-pdf-o"></i> Flyer</a> zum downloaden und weiterverteilen.
+          Vielen Dank für die bisherigen Spenden!
         </p>
       </div>
       <div class="col-lg-4">
