no link from home to spenden
changed the link on the image from spenden to fotos

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@ navigation_weight: 10
                 <img src="img/slides/5.jpg" alt="Vergnügen im Hallenbad" />
                 <div class="flex-caption">
                   <p>Vergnügen im Hallenbad</p>
-                  <a href="spenden.html" class="btn btn-theme">Jetzt spenden</a>
+                  <a href="fotos.html" class="btn btn-theme">Fotos der Schulungen</a>
                 </div>
               </li>
             </ul>
